--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="bg-gray-200" id="root"></div>
+    <div class="bg-slate-100 " id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
 </body>
 
